Never end the video - see if this fixes the bug on Safari

--- a/app/styles/partials/menu.scss
+++ b/app/styles/partials/menu.scss
@@ -25,6 +25,7 @@ div.menu {
     width: 100%;
     border: 0px solid white;
     padding: 0;
+    color: #000;
     &:hover {
       color: $blue;
     }
